Dataset web editor and simple manager
Dataset web editor and simple web manager
some refactoring
Preparation for dataset wizard for "normal people"

--- a/Web.Statu/Content/GlobalSite.v1.2.css
+++ b/Web.Statu/Content/GlobalSite.v1.2.css
@@ -1470,3 +1470,19 @@ div.verticaltab-container {
     .highlighting highl {
         font-weight:bold;
     }
+
+
+.form-group  .input-sm {
+    height: 30px;
+    padding: 5px 10px;
+    font-size: 12px;
+    line-height: 1.5;
+    border-radius: 3px;
+}
+
+.form-group textarea.input-sm {
+    padding: 5px 10px;
+    font-size: 12px;
+    line-height: 1.5;
+    border-radius: 3px;
+}
