--- a/Web.Statu/Views/Data/Manage.cshtml
+++ b/Web.Statu/Views/Data/Manage.cshtml
@@ -73,7 +73,7 @@
     <div class="col-xs-12 col-sm-6">
         <h4>Pro "normální" lidi <i class="far fa-smile-wink"></i></h4>
         <p>
-            Využijte tento postup, pokud máte jednoduchou strukturu dat (typicky Excel, CSV soubor) a neumíte sestavit JSON Schema
+            Postup pro netechnické uživatele. Využijte tento postup, pokud máte jednoduchou strukturu dat (typicky Excel, CSV soubor) a neumíte sestavit JSON Schema
         </p>
         <a href="#/data/createSimple" class="btn btn-primary" disabled="disabled">Vytvořit pomocí Excelu/CSV...</a>
 
